# intentguard

./: .gitignore  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  claude-review.yml
adapters/: __init__.py
adapters/contextforge/: __init__.py  _cpex.py  external-server.yaml  gateway-plugins.yaml  plugin.py  verdict.py
docs/: architecture.md
engine/: __init__.py  config.py  core.py
engine/api/: __init__.py  app.py  auth.py  server.py
engine/audit/: __init__.py  log.py  owasp.py
engine/intent/: __init__.py  anthropic.py  base.py  mock.py  provision.py
engine/pdp/: __init__.py  bootstrap.py  memory.py  model.fga  model.py  openfga.py  registry.py  store.py  tools.json  writer.py
engine/schema/: __init__.py  decide.py
examples/demo-injection/: demo.py  intent.json
examples/demo-ui/: index.html  server.py
examples/implementation/: 01_quickstart.py  02_guarded_agent_loop.py  03_observe_then_enforce.py  04_escalation_and_human_approval.py  README.md  intentguard_client.py  requirements.txt
tests/: conftest.py  test_adapter_contextforge.py  test_anthropic_parser.py  test_architecture_invariants.py  test_argument_binding.py  test_decide_contract.py  test_demo_and_audit.py  test_injection_scenario.py  test_model_binding.py  test_openfga_integration.py  test_parse_provision.py  test_provisioning_auth.py  test_tool_registry.py
