[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentguard"
version = "0.1.0"
description = "Intent-authorization engine for AI agents. Decides, per tool call, whether an action is within what the user actually asked for."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "IntentGuard contributors" }]
keywords = ["ai-agents", "authorization", "prompt-injection", "mcp", "openfga", "security"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
# The real policy-store backend. The in-memory backend (used by tests and the
# demo) needs none of these, so the test suite runs with no network.
openfga = ["openfga-sdk>=0.10,<1.0"]
# The default real intent parser. Tests use the deterministic mock instead.
anthropic = ["anthropic>=0.40"]
# The ContextForge gateway plugin framework. The adapter falls back to an
# isolated shim when this is absent, so adapter logic stays testable.
contextforge = ["cpex>=0.1.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[tool.setuptools.packages.find]
include = ["engine*", "adapters*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
